data/objects/Commission_Split_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Percent__c</fullName>
        <label>Commission Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Split__c</fullName>
        <label>Commission Split</label>
        <referenceTo>Commission_Split__c</referenceTo>
        <relationshipLabel>Commission Split Schedules</relationshipLabel>
        <relationshipName>Commission_Split_Sechedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year 1</fullName>
                </value>
                <value>
                    <fullName>Year 2</fullName>
                </value>
                <value>
                    <fullName>Year 3</fullName>
                </value>
                <value>
                    <fullName>Year 4</fullName>
                </value>
                <value>
                    <fullName>Year 5</fullName>
                </value>
                <value>
                    <fullName>Year 6</fullName>
                </value>
                <value>
                    <fullName>Year 7</fullName>
                </value>
                <value>
                    <fullName>Year 8</fullName>
                </value>
                <value>
                    <fullName>Year 9</fullName>
                </value>
                <value>
                    <fullName>Year 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <label>Commission Split Schedule</label>
    <nameField>
        <displayFormat>CSSched-{0000000}</displayFormat>
        <label>Commission Split Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Split Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>